[package]
name = "R1CS_Example"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.4"
ark-ff = "0.4"
ark-groth16 = "0.4.0"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"
ark-std = { version = "0.4", features = ["std"] }

rand = { version = "0.8.5", features = ["std", "std_rng"] }